# rspm_repo_deps_poc

./: MODULE.bazel  README.md  discussion.md
examples/simple/: BUILD.bazel  MODULE.bazel
rules/: extensions.bzl  repo_attrs.bzl  repo_rules.bzl  swift_package_download.bzl  swift_package_index.bzl  swift_packages.bzl  swift_pkgs.bzl
